# PyTif

./: .gitignore  LICENSE  PyTif.spec  README.md  TODO.md  main.py  package-list.txt  pyproject.toml
.github/workflows/: build.yml  dmg_settings.py
src/: file_filter_model.py  io_handler.py  main.py  roi.py  utils.py  widgets.py
src/pytif/: __main__.py  constants.py  file_filter_model.py  io_handler.py  main_window.py  utils.py  widgets.py
