[project]
name = "pytif"
version = "0.1.0"
description = "A visualization app for tiff files with pyQt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2026.3.6",
    "numpy>=2.4.3",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.2",
    "shiboken6>=6.10.2",
    "tifffile>=2026.3.3",
]

[project.scripts]
pytif = "pytif.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

